@@ -407,7 +407,7 @@ static void worker_main(void *vpArg)
            rc == 0 && rd.ulData != WORKTYPE_EXIT) {
         pconn = worker_args->pconn;
         ap_sock_disable_nagle(worker_args->conn_sd);
-        current_conn = ap_new_connection(pconn, ap_server_conf, worker_args->conn_sd, conn_id);
+        current_conn = ap_run_create_connection(pconn, worker_args->conn_sd, conn_id);
 
         if (current_conn) {
             ap_process_connection(current_conn);
